--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,8 @@ body{
     background-color:black;
     overflow: hidden;
     font-family: sans-serif;
+    max-width:1900px ;
+    min-width:1300px;
 }
 .container{
     position:absolute;
