--- a/estilo.css
+++ b/estilo.css
@@ -2,8 +2,6 @@ body{
     background-color:black;
     overflow: hidden;
     font-family: sans-serif;
-    max-width:1900px ;
-    min-width:1300px;
 }
 .container{
     position:absolute;
@@ -38,8 +36,8 @@ body{
     flex-direction: column;
     align-items: center;
     gap:18px;
-    width:100%;
-    
+    width:100vw;
+   
 
 }
 .buttons-container img{
@@ -74,8 +72,22 @@ body{
     justify-content: center;
     background-color: #e03ea1;
     box-shadow:0px 0px 18px 1px #e03ea1 ;
-    width:432px;
+    width:350px;
     border-radius:25px;
     gap:10px;
     padding-inline:20px;
+}
+@media only screen and (min-width:380px) and (max-width:1200px){
+    .buttons-container{
+        margin-bottom:30px;
+        margin-top:10px;
+        color:#fff;
+        display:flex;
+        justify-content:center;
+        flex-direction: column;
+        align-items: center;
+        gap:18px;
+        width:100vw;
+    }
+
 }
